# CloudCompare

./: .gitignore  CMakeLists.txt
cmake/: DeployQt.cmake
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qCompass/ui/: compassDlg.ui  mapDlg.ui
plugins/core/Standard/qLabeling/: CMakeLists.txt  info.json  qLabeling.qrc
plugins/core/Standard/qLabeling/include/: ccAbstractTool.h  ccLabeling.h  ccLabelingUI.h  ccPickAndLabelingTool.h
plugins/core/Standard/qLabeling/src/: ccLabeling.cpp  ccLabelingUI.cpp  ccPickAndLabelingTool.cpp
plugins/core/Standard/qLabeling/ui/: LabelingUI.ui
plugins/core/Standard/qSkeleton/: CMakeLists.txt  info.json  qSkeleton.qrc
plugins/core/Standard/qSkeleton/include/: qSkeleton.h
plugins/core/Standard/qSkeleton/src/: qSkeleton.cpp
qCC/: CMakeLists.txt
